fix: adjust spacing between paragraph and div

--- a/css/style.css
+++ b/css/style.css
@@ -156,6 +156,7 @@ h1, h2, h3, h4, h5, h6 {
 	font-weight: 500;
 }
 
+p + div,
 p + p,
 p + section,
 section + section,
